# aoc2024-solutions

./: README.md  pyproject.toml
solutions/day01/: part1.py  part2.py
solutions/day02/: part1.py  part2.py
solutions/day03/: part1.py  part2.py
