[project]
name = "adventofcode2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 88

lint.select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
#    "D",   # Pydocstyle
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "I",   # Isort
    "N",   # Pep8 Naming Conventions
    "SIM", # flake8-simplify
    "W",   # Pycodestyle warnings
]
lint.ignore = [
    "ANN204", # Missing return type annotation for special method (like __str__)
    "ANN401", # Use of the Any type (sometimes you need it)
    "D",   # Pydocstyle  (This is more of a playground project)
]
lint.per-file-ignores."__init__.py" = [ "D104" ] # Missing docstring in public package
lint.per-file-ignores."tests/*" = [ "ANN201" ] # Missing type annotation for tests

# __init__.py files are not required to have docstrings
lint.pydocstyle.convention = "google"
lint.pydocstyle.ignore-decorators = [ "property", "reflex.var" ]
